ui: Enable scrollbar for dialog info, fixes #5405
When the dvr info dialog has a lot of text it was overflowing
on to the buttons in the bbar.

--- a/src/webui/static/app/ext.css
+++ b/src/webui/static/app/ext.css
@@ -842,7 +842,7 @@
     /* Details in here are overridden by  code */
 }
 .dvr-details-dialog-content {
-    position: absolute;
+    position: relative;
     top: 0;
     left: 0;
 }
